# simply_transcribe

./: .gitignore  README.md  pyproject.toml  record_process_to_clipboard.py
electron-transcribe/: README.md  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  transcribe-hotkey.sh
